--- a/test.ipynb
+++ b/test.ipynb
@@ -110,7 +110,7 @@
     "# import googletrans\n",
     "\n",
     "\n",
-    "genai.configure(api_key='AIzaSyBscSVRhYb6I2J70XYMAZZjr3JVMgQTPiw')\n",
+    "genai.configure(api_key='')\n",
     "for m in genai.list_models():\n",
     "    if 'generateContent' in m.supported_generation_methods:\n",
     "        print(m.name)\n",
