--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,33 +61,9 @@
       " * Running on all addresses (0.0.0.0)\n",
       " * Running on http://127.0.0.1:8080\n",
       " * Running on http://192.168.1.6:8080\n",
-      "Press CTRL+C to quit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   BaseSellingPrice UserHistory AgeGroup DeviceType OSType ScreenSize  \\\n",
-      "0               5.0     Premium    18-24     Mobile    iOS      Large   \n",
-      "\n",
-      "  CompetitorPricing RegionalDemand CustomerRating PaydayProximity  ...  \\\n",
-      "0           Similar           High           High            Near  ...   \n",
-      "\n",
-      "  ProductMarketingStatus DayOfWeek DemandIndex SpecialOccasion Temperature  \\\n",
-      "0                    Low    Friday      Medium            None          22   \n",
-      "\n",
-      "   WeatherCondition InventoryLevel CityType WeekdayType  DayType  \n",
-      "0             Sunny           High    Rural     Weekend  Regular  \n",
-      "\n",
-      "[1 rows x 21 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [11/Feb/2025 22:09:31] \"POST /invocations HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [12/Feb/2025 06:43:26] \"POST /invocations HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [12/Feb/2025 06:43:46] \"POST /invocations HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -161,7 +137,9 @@
     "    current_timestamp_start = start.strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]\n",
     "\n",
     "    beer_data = request.get_json()\n",
-    "\n",
+    "    if not beer_data.get('BaseSellingPrice', None) or beer_data.get('BaseSellingPrice', None) < 0:\n",
+    "        answer=json.dumps({\"error\":\"Base Selling Price is missing\"})\n",
+    "        return flask.Response(response=answer, status=403, mimetype='application/json')\n",
     "\n",
     "    \n",
     "    try:\n",
@@ -170,9 +148,8 @@
     "        # cat_features = ['BeerType', 'Packaging', 'Country', 'DemandIndex', 'Import/Local']\n",
     "\n",
     "        # predicted_price = predict_single_entry(loaded_model, scaler, feature_names, cat_features, num_features, beer_data)\n",
-    "        df = pd.DataFrame([beer_data])\n",
-    "        print(df)\n",
-    "        predicted_price=calculate_dynamic_beer_price(df)\n",
+    "       \n",
+    "        predicted_price=calculate_dynamic_beer_price(beer_data)\n",
     "        schema=f\"\"\" You are a FAQ chatbot which takes base selling price and predicted price of a beer based on several factors provided in context.\n",
     "        Use the context provided {beer_data}, the predicted price is {predicted_price} .\n",
     "        1. You need to provide the reasoning of % price change in base price and predicted price on factors mentioned above.\n",
